--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,17 @@
 #DATABASE
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/pruebitas
+spring.datasource.username=root
+spring.datasource.password=root
 #ORM
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
 #SQL
 spring.jpa.show-sql = true
 #DRIVER
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#MULTIPART
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 
